--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '3'
 
 services:
+  mongodb:
+    image: mongo:4.4
+    container_name: mongodb_container
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=pass
+    volumes:
+      - mongodb_data:/var/lib/mongodb
+    ports:
+      - 27017:27017
+    command: mongod
+    restart: unless-stopped
+
   MSSQLSERVER:
     restart: always
     container_name: mssql_container
@@ -41,8 +54,33 @@ services:
     ports:
       - '5050:80'
 
+  mysql:
+      container_name: mysql_container
+      image: mysql:5.7
+      restart: always
+      environment:
+        MYSQL_DATABASE: 'db'
+        # So you don't have to use root, but you can if you like
+        MYSQL_USER: 'user'
+        # You can use whatever password you like
+        MYSQL_PASSWORD: 'password'
+        # Password for root access
+        MYSQL_ROOT_PASSWORD: 'Mysql12345**'
+      ports:
+        # <Port exposed> : < MySQL Port running inside container>
+        - '3306:3306'
+      expose:
+        # Opens port 3306 on the container
+        - '3306'
+        # Where our data will be persisted
+      volumes:
+        - mysql_data:/var/lib/mysql
+
 volumes:
   mssql_data:
   mssql_log:
   mssql_secrets:
   postgres_data:
+  mysql_data:
+  mongodb_data:
+
