--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3'
 
 services:
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+      - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+    networks:
+      - rabbitmq_go_net
+
   mongodb:
     image: mongo:4.4
     container_name: mongodb_container
@@ -55,26 +67,30 @@ services:
       - '5050:80'
 
   mysql:
-      container_name: mysql_container
-      image: mysql:5.7
-      restart: always
-      environment:
-        MYSQL_DATABASE: 'db'
-        # So you don't have to use root, but you can if you like
-        MYSQL_USER: 'user'
-        # You can use whatever password you like
-        MYSQL_PASSWORD: 'password'
-        # Password for root access
-        MYSQL_ROOT_PASSWORD: 'Mysql12345**'
-      ports:
-        # <Port exposed> : < MySQL Port running inside container>
-        - '3306:3306'
-      expose:
-        # Opens port 3306 on the container
-        - '3306'
-        # Where our data will be persisted
-      volumes:
-        - mysql_data:/var/lib/mysql
+    container_name: mysql_container
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_DATABASE: 'db'
+      # So you don't have to use root, but you can if you like
+      MYSQL_USER: 'user'
+      # You can use whatever password you like
+      MYSQL_PASSWORD: 'password'
+      # Password for root access
+      MYSQL_ROOT_PASSWORD: 'Mysql12345**'
+    ports:
+      # <Port exposed> : < MySQL Port running inside container>
+      - '3306:3306'
+    expose:
+      # Opens port 3306 on the container
+      - '3306'
+      # Where our data will be persisted
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+networks:
+  rabbitmq_go_net:
+    driver: bridge
 
 volumes:
   mssql_data:
@@ -83,4 +99,3 @@ volumes:
   postgres_data:
   mysql_data:
   mongodb_data:
-
